gccida/c3/clear_storage
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3043:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3047:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3048:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3062:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3063:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3065:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3066:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3067:5: error: expected ';' after expression
tree v33; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3067:6: error: use of undeclared identifier 'v33'
tree v33; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3068:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3069:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3070:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3071:5: error: expected ';' after expression
tree v37; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3071:6: error: use of undeclared identifier 'v37'
tree v37; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3072:5: error: expected ';' after expression
tree v38; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3072:6: error: use of undeclared identifier 'v38'
tree v38; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3083:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( __int64)object[1]; 
               ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3101:40: error: use of undeclared identifier 'machine_mode'
mode_alignment = get_mode_alignment( ( machine_mode)BYTE2( v2)); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/expr.c:3118:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)v6->fld[0]; 
                      ^~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/clear_storage/src/obj/expr.o] Error 1
